# llm_practice

./: .gitignore  LICENSE
fine-tuning/: ft-env.yml  ft-example.ipynb
fine-tuning/distilbert-base-uncased-lora-text-classification/runs/Jan05_19-05-15_MacBook-Pro.local/: events.out.tfevents.1704461723.MacBook-Pro.local.76320.0
fine-tuning/distilbert-base-uncased-lora-text-classification/runs/Jan05_19-09-10_MacBook-Pro.local/: events.out.tfevents.1704461954.MacBook-Pro.local.76651.0
hugging_face/: hf-env.yml
hugging_face/hf_example1/: hf-sandbox.ipynb
langchain/: README.md  langchain-env.yml
langchain/langchain-poetry-env/: pyproject.toml
langchain/langchain_example1/: automatic_grader-example.ipynb
langchain/langchain_example2/: chain.py  output_parser.py  prompt_template.py  simple_example.py
langchain/langchain_example3/: api_chain.ipynb  main.ipynb
open_ai_tool/: app.py  explainer.py  requirements.txt  test_api.ipynb  text_to_speech.py
open_ai_tool/open-ai-env/: pyproject.toml
