[tool.poetry]
name = "open-ai-env"
version = "0.0.1"
description = ""
authors = ["Sahil Batra"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
streamlit = "^1.20.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]